# voronoi

./: .gitignore  CMakeLists.txt  README.md
shaders/: line.vs  triangle.frag  triangle.vs
src/: game.cpp  game.hpp  game_input.hpp  line_object.cpp  line_object.hpp  line_renderer.cpp  line_renderer.hpp  main.cpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  triangle_object.cpp  triangle_object.hpp  triangle_renderer.cpp  triangle_renderer.hpp  voronoi.cpp  voronoi.hpp
